--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <title>Natour</title>
-        <link href="https://fonts.googleapis.com/css?family=Lato:400,400i" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
         <link href="css/Style1.css" rel="stylesheet">
     </head>
     <body>
-        Hey there!
+        <header class="header"></header>
     </body>
 </html>
