Main page with heading animation

--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!Doctype Html>
 <html>
     <head>
-        <title>Natour</title>
-        <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
-        <link href="css/Style1.css" rel="stylesheet">
-    </head>
-    <body>
-        <header class="header"></header>
-    </body>
+    <title>Natour</title>
+<!--    linking google font: Roboto -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
+    <link href="css/Style1.css" rel="stylesheet">
+</head>
+
+<body>
+    <!--   Since the webpage will be accessed by scrolling through the elements, therefore main page is defined as a header-->
+    <header class="header">
+        <div class="logo-box">
+            <!--     To manipulate the attributes of image .logo is defined -->
+            <img src="assets/logo-white.png" class="logo">
+        </div>
+        <!--     Wrapping the heading around a div block to position all of the elements in the center of page-->
+        <div class="text-box">
+            <!--     MainHeading-->
+            <span class="text-box-primaryT">Outdoors</span>
+            <!--     SubHeading-->
+            <span class="text-box-subT">is where life happens</span>
+        </div>
+    </header>
+</body>
 </html>
