--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <span class="text-box-primaryT">Outdoors</span>
             <!--     SubHeading-->
             <span class="text-box-subT">is where life happens</span>
+            <a href="#" class="btn btn-white">Discover our tours</a>
         </div>
     </header>
 </body>
